--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "npm run dev:api & npm run dev:web",
     "dev:web": "npm run dev --workspace=apps/web",
     "dev:api": "npm run dev --workspace=apps/api",
-    "build": "npm run build --workspaces",
+    "build": "npm run build:shared && npm run build:api && npm run build:web",
     "build:web": "npm run build --workspace=apps/web",
     "build:api": "npm run build --workspace=apps/api",
     "build:shared": "npm run build --workspace=packages/shared",
